// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select when size is "large" and "fullWidth" property is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 100%;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        id="rc_select_TEST_OR_SSR"
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "large" and "width" property is set to custom value renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 350px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="undefined_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "large" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 256px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select rovna-ui-select-lg c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="undefined_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "medium" and "fullWidth" property is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 100%;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        id="rc_select_TEST_OR_SSR"
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "medium" and "width" property is set to custom value renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 350px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="undefined_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "medium" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 256px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="undefined_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "small" and "fullWidth" property is "true" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 100%;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        id="rc_select_TEST_OR_SSR"
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "small" and "width" property is set to custom value renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 350px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="undefined_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select when size is "small" renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c0.rovna-ui-select {
  width: 256px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm .rovna-ui-select-selection-search {
  padding-right: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-sm:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 0 8px;
}

.c0.rovna-ui-select.rovna-ui-select-single:not(.rovna-ui-select-lg):not(.rovna-ui-select-sm):not(.rovna-ui-select-customize-input) .rovna-ui-select-selector .rovna-ui-select-selection-search {
  inset-inline-start: 7px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selection-search {
  padding-right: 32px;
}

.c0.rovna-ui-select.rovna-ui-select-single.rovna-ui-select-lg:not(.rovna-ui-select-customize-input) .rovna-ui-select-selector {
  padding: 4px 12px;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #646A74FF;
}

.c0.rovna-ui-select .rovna-ui-select-selection-placeholder > .anticon {
  margin-right: 8px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-search {
  margin-right: 20px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item {
  color: #343A4AFF;
  font-size: 12px;
  height: 16px;
}

.c0.rovna-ui-select.rovna-ui-select-multiple .rovna-ui-select-selection-item .rovna-ui-select-selection-item-content {
  line-height: initial;
}

.c0.rovna-ui-select .rovna-ui-select-clear {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  inset-inline-end: 30px;
}

.c0.rovna-ui-select-dropdown {
  padding: 12px 0;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-vertical {
  background: #F4F4F5FF;
  border-radius: 16px;
  margin-right: 4px;
  visibility: visible !important;
}

.c0.rovna-ui-select-dropdown .rc-virtual-list-scrollbar-thumb {
  background: #DDDEE1FF !important;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item {
  border-radius: 0;
}

.c0.rovna-ui-select-dropdown .rovna-ui-select-item-option-selected:not(.rovna-ui-select-item-option-disabled):hover {
  background-color: #F4F4F5FF;
}

<div
  aria-label="Выбор значения"
  className="rovna-ui-select rovna-ui-select-sm c0 css-dev-only-do-not-override-u64svk rovna-ui-select-single rovna-ui-select-show-arrow"
  data-rovna-ui-open={false}
  data-testid="rovna-ui-select"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-select-selector"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <span
      className="rovna-ui-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Выбор значения"
        aria-owns="undefined_list"
        autoComplete="off"
        className="rovna-ui-select-selection-search-input"
        disabled={false}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        readOnly={true}
        role="combobox"
        style={
          {
            "opacity": 0,
          }
        }
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      className="rovna-ui-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden={true}
    className="rovna-ui-select-arrow"
    onMouseDown={[Function]}
    style={
      {
        "WebkitUserSelect": "none",
        "userSelect": "none",
      }
    }
    unselectable="on"
  >
    <span
      className="c1 rovna-ui-icon-root anticon c2"
      data-testid="rovna-ui-chevron-down-icon"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;
